添加popover出的自定义控制器

--- a/美团IPad/美团IPad/Classes/Home(首页)/View/MTHomeLeftTopItem.xib
+++ b/美团IPad/美团IPad/Classes/Home(首页)/View/MTHomeLeftTopItem.xib
@@ -61,6 +61,9 @@
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="iconBtn" destination="PyK-zv-fwr" id="EIh-87-tC4"/>
+            </connections>
             <point key="canvasLocation" x="396" y="236.5"/>
         </view>
     </objects>
