--- a/美团IPad/美团IPad/Classes/Home(首页)/View/MTHomeLeftTopItem.xib
+++ b/美团IPad/美团IPad/Classes/Home(首页)/View/MTHomeLeftTopItem.xib
@@ -18,8 +18,8 @@
                         <constraint firstAttribute="width" constant="1" id="J7K-u3-FWn"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="标题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jI1-Cj-tq8">
-                    <rect key="frame" x="51" y="0.0" width="64" height="15"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="标题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jI1-Cj-tq8">
+                    <rect key="frame" x="51" y="0.0" width="106" height="15"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="15" id="IvH-eQ-SEw"/>
                     </constraints>
@@ -27,8 +27,8 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="子标题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6g3-eI-a6k">
-                    <rect key="frame" x="51" y="15" width="64" height="20"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="子标题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6g3-eI-a6k">
+                    <rect key="frame" x="51" y="15" width="106" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="nRr-Aj-nNK"/>
                     </constraints>
@@ -36,8 +36,8 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PyK-zv-fwr" userLabel="图标按钮">
-                    <rect key="frame" x="0.0" y="0.0" width="120" height="35"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PyK-zv-fwr" userLabel="图标按钮">
+                    <rect key="frame" x="0.0" y="0.0" width="162" height="35"/>
                     <inset key="contentEdgeInsets" minX="12" minY="0.0" maxX="0.0" maxY="0.0"/>
                     <state key="normal" image="icon_district"/>
                     <state key="highlighted" image="icon_district_highlighted"/>
